--- a/ProyectoFinal/Views/Home/Index.cshtml
+++ b/ProyectoFinal/Views/Home/Index.cshtml
@@ -39,8 +39,8 @@
                 <div class="card">
                     <img src="~/img/indexcarrousel.webp" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Asus</h5>
+                        <p class="card-text">ASUS es uno de los tres fabricantes de PC portátiles de consumo líder a nivel global y creador de las motherboards más vendidas y premiadas.</p>
                     </div>
                 </div>
             </div>
@@ -49,8 +49,8 @@
                 <div class="card">
                     <img src="~/img/apple.webp" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title">Apple</h5>
+                        <p class="card-text">Apple, Inc. es una empresa estadounidense que diseña y produce equipos electrónicos, software y servicios</p>
                     </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
                 <div class="card">
                     <img src="~/img/indexcarrousel3.jpg" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title">Logitech</h5>
+                        <p class="card-text">Logitech es una empresa multimarca diseñadora de productos que unen a las personas a través de la música, el juego, el video y la computación.</p>
                     </div>
                 </div>
             </div>
@@ -93,8 +93,9 @@
     
 
     <hr class="featurette-divider">
-
-    <a class="btn btn-primary" href="/Productos" role="button">Ir a productos</a>
+    <h2>¿Queres saber mas?</h2>
+    <p>Mira todo nuestro catalogo pulsando el siguiente boton</p>
+    <a asp-action="Index" asp-controller="Productos" class="btn btn-primary btn-lg" id="botoncito" role="button">Ir a productos</a>
 
     <hr class="featurette-divider">
 
