--- a/ProyectoFinal/Views/Ordenes/Listar.cshtml
+++ b/ProyectoFinal/Views/Ordenes/Listar.cshtml
@@ -26,6 +26,7 @@
                         <th>Fecha de entrega</th>
                         <th>Codigo de cliente</th>
                         <th>Codigo de empleado</th>
+                        <th>Funciones</th>
                         
 
                     </tr>
