--- a/ProyectoFinal/Views/Ordenes/GuardarForm.cshtml
+++ b/ProyectoFinal/Views/Ordenes/GuardarForm.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Fecha de entrega</label>
-                <input asp-for="FECHA_ENTREGA" type="text" class="form-control">
+                <input asp-for="FECHA_ENTREGA" type="date" class="form-control">
 
             </div>
             <div class="mb-3">
