--- a/ProyectoFinal/Views/Productos/Index.cshtml
+++ b/ProyectoFinal/Views/Productos/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <h5 class="card-title">Smart TV Full HD Samsung 43"</h5>
                 <h6 class="card-text">$90.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <h5 class="card-title">Smart TV LED" 32 Noblex</h5>
                 <h6 class="card-text">$60.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -33,7 +33,7 @@
             <div class="card-body">
                 <h5 class="card-title">Smart TV Admiral 32" 4K UHD</h5>
                 <h6 class="card-text">$150.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
             <div class="card-body">
                 <h5 class="card-title">MacBook Air 13" M1 Chip 8-core</h5>
                 <h6 class="card-text">$850.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
             <div class="card-body">
                 <h5 class="card-title">Notebook Asus Rog Zephyrus G14</h5>
                 <h6 class="card-text">$550.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -63,7 +63,7 @@
             <div class="card-body">
                 <h5 class="card-title">Notebook Lenovo 14" Core i5 8GB</h5>
                 <h6 class="card-text">$350.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -73,7 +73,7 @@
             <div class="card-body">
                 <h5 class="card-title">iPhone 13 129GB Black</h5>
                 <h6 class="card-text">$750.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -83,7 +83,7 @@
             <div class="card-body">
                 <h5 class="card-title">Samsung Galaxy Z Fold 4</h5>
                 <h6 class="card-text">$450.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -93,7 +93,7 @@
             <div class="card-body">
                 <h5 class="card-title">Xiaomi Redmi Note 11 Pro 8GB</h5>
                 <h6 class="card-text">$350.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -103,7 +103,7 @@
             <div class="card-body">
                 <h5 class="card-title">Sony PlayStation 5 PS5</h5>
                 <h6 class="card-text">$340.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -113,7 +113,7 @@
             <div class="card-body">
                 <h5 class="card-title">Xbox Serie X</h5>
                 <h6 class="card-text">$220.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@
             <div class="card-body">
                 <h5 class="card-title">Consola Retro Boy X</h5>
                 <h6 class="card-text">$18.000</h6>
-                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+                <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success btn-sm">Comprar</a>
             </div>
         </div>
     </div>
