--- a/ProyectoFinal/wwwroot/css/site.css
+++ b/ProyectoFinal/wwwroot/css/site.css
@@ -17,3 +17,13 @@ body {
     margin-bottom: 60px;
     background-color: #f5f5f5;
 }
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
+    scroll-behavior: smooth;
+}
