detalles (pendiende Authorize)

--- a/ProyectoFinal/Views/Home/Index.cshtml
+++ b/ProyectoFinal/Views/Home/Index.cshtml
@@ -93,10 +93,12 @@
     
 
     <hr class="featurette-divider">
-    <h2>¿Queres saber mas?</h2>
-    <p>Mira todo nuestro catalogo pulsando el siguiente boton</p>
-    <a asp-action="Index" asp-controller="Productos" class="btn btn-primary btn-lg" id="botoncito" role="button">Ir a productos</a>
+    <div class="finaldepag">
+        <h2>¿Queres saber mas?</h2>
+        <p>Mira todo nuestro catalogo pulsando el siguiente boton</p>
+        <a asp-action="Index" asp-controller="Productos" class="btn btn-primary" id="botoncito" role="button">Ir a productos</a>
+    </div>
+    
 
-    <hr class="featurette-divider">
 
 </div>
