--- a/ProyectoFinal/Views/Ordenes/Listar.cshtml
+++ b/ProyectoFinal/Views/Ordenes/Listar.cshtml
@@ -16,6 +16,8 @@
         </div>
         <div class="card-body">
             <a asp-action="GuardarForm" asp-controller="Ordenes" class="btn btn-success">Crear nuevo</a>
+            <a asp-action="GuardarForm" asp-controller="OrdenesProductos" class="btn btn-primary">Ordenes Productos</a>
+            
             <hr />
             <table id="tb_ordenes" class="display" style="width:100%">
                 <thead>
