--- a/ProyectoFinal/wwwroot/css/Index.css
+++ b/ProyectoFinal/wwwroot/css/Index.css
@@ -1,16 +1,17 @@
-﻿
-
+﻿.finaldepag {
+    text-align: center;
+}
 .card {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
-
-h3 {
+h3{
     text-align: center;
 }
-
-
 #fotogamer, #fotoenvio {
-    width: 750px;    
+    width: 750px;
+    
 }
+
+
 
 
